// Vitest Snapshot v1

exports[`addPipe.ts > addPipe.ts 1`] = `
"import * as T from \\"@effect/core/io/Effect\\"
import { pipe } from \\"@tsplus/stdlib/data/Function\\"

const test = pipe(1, T.succeed, T.map(/* HERE */(a: number) => a * 2))
"
`;

exports[`removePipe.ts > removePipe.ts 1`] = `
"import * as T from \\"@effect/core/io/Effect\\"
import { pipe } from \\"@tsplus/stdlib/data/Function\\"

const test = /* HERE */
T.map(a => a * 1)(T.succeed(1))
"
`;
